# apportalUI-

./: README.md
AppLink/app/src/main/java/vmi/f000/itri/applink/: MainActivity.java
Brahma_Branch/Dev_COVID/Brahma_Android_Client/brahmalibrary/src/main/res/layout/: activity_video.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/: build.gradle  fabric.properties  proguard-rules.pro
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/: Android.mk  cscope.out  cscope.po.out  globals.mk  tags
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emu/: Android.mk  android-emu.cmake
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emu/android/base/: Debug.cpp
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emu/android/featurecontrol/: FeatureControl.cpp  ICLFeatureControlImpl.cpp  ICLFeatureControlImpl.h
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emugl/: Android.mk  CMakeLists.txt
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emugl/shared/OpenglCodecCommon/: ErrorLog.h
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/android-emugl_2019.09.04/shared/OpenglCodecCommon/: Android.mk
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/render-server/: Android.mk  OpenglEsStreamHandler.h  RendererDisplay.cpp  Vsync.cpp  main.cpp
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/libs/src/render-server/featurecontrol/: FeatureControl.cpp  FeatureControlImpl.cpp  FeatureControlImpl.h
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/: AndroidManifest.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/cpp/: CMakeLists.txt  OpenglEsStreamHandler.cpp  OpenglEsStreamHandler.h  RenderServer.cpp  RenderServer.h  debug.h  native-lib.cpp  renderer.cpp  renderer.h
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/java/appspot/apprtc/: FramePool.java  VideoStreamsView.java
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/drawable/: background_gradient_0.xml  layer_progress.xml  searchitems_click.xml  shape_circle.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/layout/: activity_brahma.xml  activity_call.xml  activity_grid.xml  activity_main.xml  adapter.xml  app_grid.xml  dialog_audio.xml  dialog_layout.xml  dialog_message.xml  dialog_progressbar.xml  dialog_progresscircle.xml  dialog_reconnect.xml  dialog_reset_password.xml  dialog_using_bio.xml  floating_view.xml  fragment_camera.xml  frg_common_table.xml  frg_tab.xml  nav_header_main.xml  search_item.xml  welcome_layout.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/menu/: activity_main_drawer.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/raw/: mykeystore.bks
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/values/: array.xml  colors.xml  dimens.xml  preference_values.xml  strings.xml  styles.xml  theme_material.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/values-ja-rJP/: dimens.xml  preference_values.xml  strings.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/values-zh-rTW/: arrays.xml  preference_values.xml  strings.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/brahmalibrary/src/main/res/xml/: pref_main.xml
Brahma_Branch/Dev_FET2/Brahma_Android_Client/gradle/wrapper/: gradle-wrapper.properties
Brahma_Branch/Dev_FET2/Brahma_Android_Client/release/: output.json
MyApplication2/app/: build.gradle
MyApplication2/app/src/androidTest/java/vmi/f000/itri/myapplication/: ExampleInstrumentedTest.java
MyApplication2/app/src/main/: AndroidManifest.xml
MyApplication2/app/src/main/res/menu/: menu_main.xml
MyApplication2/app/src/test/java/vmi/f000/itri/myapplication/: ExampleUnitTest.java
MyApplication2/gradle/wrapper/: gradle-wrapper.properties
MyApplication3/app/src/main/java/vmi/f000/itri/myapplication/: MainActivity.java
MyApplication3/gradle/wrapper/: gradle-wrapper.properties
mutli_connection/app/src/main/java/vmi/f000/itri/common/: AppInfo.java  ConnectionInfo.java  Constants.java  DatabaseHandler.java  FileHandler.java  (+4 more)
(+328 files in other folders)
